# any-llm-rust

./: .gitmodules  Cargo.toml  README.md
src/: api.rs  errors.rs  lib.rs  registry.rs  types.rs
src/providers/: anthropic.rs  base.rs  llamafile.rs  mod.rs  ollama.rs  openai.rs
tests/: integration.rs
